--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -31,6 +31,8 @@
       src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"
       charset="utf-8"
     ></script>
+    <!-- <script src="https://apis.google.com/js/platform.js" defer></script> -->
+    <script src="https://accounts.google.com/gsi/client" defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
